chore: support for swagger

--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/FlightsProject.Web.csproj
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/FlightsProject.Web.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" PrivateAssets="All" />
     <PackageReference Include="Serilog.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
