chore: handle journey query for app layer

--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.UseCases/FlightsProject.UseCases.csproj
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.UseCases/FlightsProject.UseCases.csproj
@@ -2,6 +2,8 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" />
+    <PackageReference Include="ErrorOr" />
+    <PackageReference Include="FluentValidation" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
   </ItemGroup>
