--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/appsettings.json
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "",
-    "SqliteConnection": ""
+    "DefaultConnection": "Server=(localdb)\\v11.0;Database=cleanarchitecture;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqliteConnection": "Data Source=database.sqlite"
   }
 }
