chore: create migration
create migration for data model. Guid pk added to entities in domain layer

--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.UseCases/FlightsProject.UseCases.csproj
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.UseCases/FlightsProject.UseCases.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="Ardalis.Result" />
     <PackageReference Include="ErrorOr" />
     <PackageReference Include="FluentValidation" />
+    <PackageReference Include="FluentValidation.AspNetCore" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
   </ItemGroup>
