--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.Core/FlightsProject.Core.csproj
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.Core/FlightsProject.Core.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Ardalis.SharedKernel" />
     <PackageReference Include="Ardalis.SmartEnum" />
     <PackageReference Include="Ardalis.Specification" />
+    <PackageReference Include="ErrorOr" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
