--- a/Backend/FlightsProject/FlightsProject/tests/FlightsProject.FunctionalTests/FlightsProject.FunctionalTests.csproj
+++ b/Backend/FlightsProject/FlightsProject/tests/FlightsProject.FunctionalTests/FlightsProject.FunctionalTests.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.1.3" />
+  <ItemGroup>
+    <Compile Remove="ApiEndpoints\**" />
+    <EmbeddedResource Remove="ApiEndpoints\**" />
+    <None Remove="ApiEndpoints\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" />
@@ -22,10 +27,6 @@
     <ProjectReference Include="..\..\src\FlightsProject.Infrastructure\FlightsProject.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\FlightsProject.UseCases\FlightsProject.UseCases.csproj" />
     <ProjectReference Include="..\..\src\FlightsProject.Web\FlightsProject.Web.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ApiEndpoints\" />
   </ItemGroup>
 
 </Project>
