--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/appsettings.json
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/appsettings.json
@@ -2,5 +2,22 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=cleanarchitecture;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqliteConnection": "Data Source=database.sqlite"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
