--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.Infrastructure/FlightsProject.Infrastructure.csproj
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.Infrastructure/FlightsProject.Infrastructure.csproj
@@ -1,10 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.1.3" />
-  <ItemGroup>
-    <Compile Remove="Data\**" />
-    <EmbeddedResource Remove="Data\**" />
-    <None Remove="Data\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Ardalis.SharedKernel" />
@@ -16,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Logging" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+    <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="SQLite" />
   </ItemGroup>
   
