feat: support roundway trip and unit test

--- a/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/Properties/launchSettings.json
+++ b/Backend/FlightsProject/FlightsProject/src/FlightsProject.Web/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:57679/"
+      "applicationUrl": "http://localhost:57679/"
     }
   }
 }
