--- a/Backend/FlightsProject/FlightsProject/tests/FlightsProject.UnitTests/FlightsProject.UnitTests.csproj
+++ b/Backend/FlightsProject/FlightsProject/tests/FlightsProject.UnitTests/FlightsProject.UnitTests.csproj
@@ -6,19 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="UseCases\**" />
-    <EmbeddedResource Remove="UseCases\**" />
-    <None Remove="UseCases\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Core\Services\ToDoItemSearchService_GetAllIncompleteItems.cs" />
-    <Compile Remove="Core\Services\ToDoItemSearchService_GetNextIncompleteItem.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentAssertions" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Moq" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="xunit.runner.visualstudio">
       <PrivateAssets>all</PrivateAssets>
@@ -36,10 +26,6 @@
     <None Update="xunit.runner.json">
 	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Core\Services\" />
   </ItemGroup>
 
   <ItemGroup>
