--- a/Frontend/FlightsProject/angular.json
+++ b/Frontend/FlightsProject/angular.json
@@ -67,7 +67,10 @@
               "browserTarget": "FlightsProject:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
